# scyllax

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile.toml  README.md  UPSERT.md  cliff.toml  docker-compose.yml  gen-changelogs.sh  init.cql  lcov.info  release.sh
.cargo/: config.toml
.github/: before_deploy.sh
.github/workflows/: audit.yml  book.yml  ci.yml  example.yml  release-cli.yml  release.yml
book/: book.toml
book/src/: README.md  SUMMARY.md
book/src/cli/: README.md
book/src/creating_entities/: README.md  camelcase_columns.md  counter_columns.md  json_columns.md
book/src/delete_queries/: README.md
book/src/example/: README.md
book/src/query_collections/: README.md
book/src/select_queries/: README.md
book/src/upsert_queries/: README.md
example/: Cargo.toml  expanded.rs
example/benches/: bench.rs
example/src/: main.rs
example/src/entities/: mod.rs
example/src/entities/person/: mod.rs  model.rs  queries.rs
example/src/entities/person_login/: mod.rs  model.rs  queries.rs
example/src/entities/post/: model.rs  queries.rs
examples/: Cargo.toml  simple.rs
notes/: UPSERT.md
scyllax/: CHANGELOG.md  Cargo.toml
scyllax-cli/: CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.bundle  README.md  init.cql
scyllax-cli/src/: lib.rs  migrate.rs  migrator.rs  model.rs  opt.rs
scyllax-macros/: CHANGELOG.md  Cargo.toml
scyllax-macros-core/: CHANGELOG.md  Cargo.toml
scyllax-macros-core/src/: entity.rs  enum.rs  json.rs  lib.rs  prepare.rs
scyllax-macros-core/src/queries/: delete.rs  mod.rs  prepare.rs  read.rs  select.rs  upsert.rs  write.rs
scyllax-macros/src/: entity.rs  enum.rs  json.rs  lib.rs
scyllax-macros/src/queries/: delete.rs  mod.rs  select.rs  upsert.rs
scyllax-parser/: CHANGELOG.md  Cargo.toml  crates.md
scyllax-parser/benches/: bench.rs
scyllax-parser/src/: comment.rs  common.rs  create_keyspace.rs  delete.rs  lib.rs  reserved.rs  select.rs  where.rs
scyllax/src/: collection.rs  entity.rs  error.rs  executor.rs  json.rs  json_blob.rs  lib.rs  maybe_unset.rs  playground.rs  prelude.rs  queries.rs  rows.rs  util.rs
src/: error.rs  executor.rs  lib.rs  maybe_unset.rs  playground.rs  prelude.rs  util.rs
test/: docker-compose.yml  migration.cql
test/migrations/20231009224357_init/: down.cql  up.cql
