[workspace]
members = ["example", "scyllax-cli", "scyllax-macros", "scyllax-macros-core", "scyllax-parser"]
resolver = "2"

[workspace.package]
version = "0.1.8-alpha"
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/trufflehq/scyllax"
keywords = ["scylla", "cassandra", "orm", "sqlx", "truffle"]
categories = ["database"]
authors = [
    "Carter Himmel <carter@truffle.vip>"
]
homepage = "https://github.com/trufflehq/scyllax#readme"
readme = "README.md"

[package]
name = "scyllax"
readme = "README.md"
description = "A SQLx and Discord inspired query system for Scylla"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
getrandom = "0.2"
mac_address = "1"
once_cell = "1"
scylla.workspace = true
scyllax-macros = { version = "0.1.8-alpha", path = "./scyllax-macros" }
scyllax-macros-core = { version = "0.1.8-alpha", path = "./scyllax-macros-core" }
thiserror = "1"
tracing.workspace = true
uuid.workspace = true

[workspace.dependencies]
scyllax-macros = { verison = "0.1.8-alpha", path = "./scyllax-macros" }
scyllax-macros-core = { verison = "0.1.8-alpha", path = "./scyllax-macros-core" }
scyllax-parser = { verison = "0.1.8-alpha", path = "./scyllax-parser" }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "tracing-log", "parking_lot"] }
tokio = { version = "1", features = ["full", "tracing"] }
scylla = { version = "0.9" }
serde_json = { version = "1", features = ["preserve_order"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["serde", "v1", "std", "fast-rng"] }
darling = "0.20"
trybuild = "1"

[profile.dev.package.backtrace]
opt-level = 3
