[workspace]
members = ["example", "scyllax", "scyllax-cli", "scyllax-macros", "scyllax-macros-core", "scyllax-parser"]
resolver = "2"

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/trufflehq/scyllax"
keywords = ["scylla", "cassandra", "orm", "sqlx", "truffle"]
categories = ["database", "concurrency"]
authors = [
    "Carter Himmel <carter@truffle.vip>"
]
homepage = "https://github.com/trufflehq/scyllax#readme"
readme = "README.md"

[workspace.dependencies]
scyllax-macros = { verison = "0.2.0", path = "./scyllax-macros" }
scyllax-macros-core = { verison = "0.2.0", path = "./scyllax-macros-core" }
scyllax-parser = { verison = "0.2.0", path = "./scyllax-parser" }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "json", "tracing-log", "parking_lot"] }
tokio = { version = "1.40.0", features = ["full", "tracing"] }
scylla = { version = "0.14.0", features = ["time"] }
serde_json = { version = "1.0.128", features = ["preserve_order"] }
serde = { version = "1.0.210", features = ["derive"] }
uuid = { version = "1.10.0", features = ["serde", "v1", "std", "fast-rng"] }
darling = "0.20.10"
trybuild = "1.0.99"

[profile.dev.package.backtrace]
opt-level = 3
