[package]
name = "example"
description = "an example using scyllax"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
scylla.workspace = true
scyllax = { path = "../scyllax" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[features]
default = ["integration"]
integration = []

[dev-dependencies]
pretty_assertions = "1"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "bench"
harness = false
