[package]
name = "example"
description = "an example using scyllax"
version = "0.1.9-alpha.3"
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
scylla.workspace = true
scyllax = { path = "../scyllax" }
tokio = { version = "1", features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
tokio-stream = "0.1.14"
futures-util = "0.3.28"
futures = "0.3.28"
rayon = "1.8.0"

[features]
default = ["integration"]
integration = []

[dev-dependencies]
pretty_assertions = "1"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "bench"
harness = false
