[package]
name = "example"
description = "an example using scyllax"
version = "0.1.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[dependencies]
anyhow = "1.0.87"
serde.workspace = true
serde_json.workspace = true
scylla.workspace = true
scyllax = { path = "../scyllax", features = ["json"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
tokio-stream = "0.1.16"
futures-util = "0.3.30"
futures = "0.3.30"
rayon = "1.10.0"
time = "0.3.36"

[features]
default = ["integration"]
integration = []

[dev-dependencies]
pretty_assertions = "1.4.0"
criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "bench"
harness = false

[[bin]]
name = "post"
path = "src/bin/post.rs"
