[package]
name = "scyllax-examples"
edition = "2021"
version = "0.0.0"
publish = false

[dependencies]

anyhow = { workspace = true }
scylla = { workspace = true }
scyllax = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[[example]]
name = "simple"
path = "simple.rs"
