[package]
name = "scyllax-cli"
description = "The CLI for scyllax -- mainly managing migrations"
version = "0.2.0-alpha.1"
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../README.md"

[[bin]]
name = "scyllax-cli"
path = "src/bin/scyllax.rs"

[dependencies]
tokio.workspace = true
clap = { version = "4", features = ["derive", "env"] }
clap_complete = { version = "4" }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
anyhow = "1.0.75"
url = { version = "2.5.0", default-features = false }
async-trait = "0.1"
console = "0.15.7"
scylla.workspace = true
scyllax = { version = "0.2.0-alpha.1", path = "../scyllax" }
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
tracing-subscriber.workspace = true
tracing.workspace = true
time = { version = "0.3.30", features = ["formatting"] }
sha2 = "0.10.8"
uuid.workspace = true

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ name }-{ version }/{ name }-{ version }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
