[package]
name = "scyllax-cli"
description = "The CLI for scyllax -- mainly managing migrations"
version = "0.2.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../README.md"

[[bin]]
name = "scyllax-cli"
path = "src/bin/scyllax.rs"

[dependencies]
tokio.workspace = true
clap = { version = "4.5.17", features = ["derive", "env"] }
clap_complete = { version = "4.5.26" }
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
anyhow = "1.0.87"
url = { version = "2.5.2", default-features = false }
async-trait = "0.1.82"
console = "0.15.8"
scylla.workspace = true
scyllax = { version = "0.2.0", path = "../scyllax" }
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
tracing-subscriber.workspace = true
tracing.workspace = true
time = { version = "0.3.36", features = ["formatting"] }
sha2 = "0.10.8"
uuid.workspace = true

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ name }-{ version }/{ name }-{ version }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
