[package]
name = "scyllax-macros-core"
description = "Core macro impl for scyllax"
version = "0.2.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../README.md"

[dependencies]
bae = { version = "0.2", package = "sea-bae" }
convert_case = "0.6.0"
darling = { version = "0.20.10", features = ["suggestions"] }
proc-macro2 = "1.0.86"
quote = "1.0.37"
scyllax-parser = { path = "../scyllax-parser", version = "0.2.0" }
syn = { version = "2.0.77", features = ["full", "derive", "extra-traits"] }
