[package]
name = "scyllax-macros"
description = "Macros for scyllax"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
scyllax-macros-core.workspace = true
