[package]
name = "scyllax-macros"
description = "Macros for scyllax"
version = "0.1.9-alpha.3"
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
scyllax-macros-core = { path = "../scyllax-macros-core", version = "0.1.9-alpha.3" }
