[package]
name = "scyllax-parser"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
nom = "7.1.3"

[dev-dependencies]
pretty_assertions = "1.1.0"
