[package]
name = "scyllax-parser"
description = "A parser for CQL queries"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
categories = ["database", "parser-implementations"]
authors.workspace = true
homepage.workspace = true
readme = 'crates.md'

[dependencies]
nom = "7.1.3"

[dev-dependencies]
pretty_assertions = "1.4.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false
