[package]
name = "scyllax"
readme = "../README.md"
description = "A SQLx and Discord inspired query system for Scylla"
version = "0.1.11-alpha"
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
getrandom = "0.2"
mac_address = "1"
once_cell = "1"
scylla.workspace = true
scyllax-macros = { version = "0.1.11-alpha", path = "../scyllax-macros" }
scyllax-macros-core = { version = "0.1.11-alpha", path = "../scyllax-macros-core" }
thiserror = "1"
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
