[package]
name = "scyllax"
readme = "../README.md"
description = "A SQLx and Discord inspired query system for Scylla"
version = "0.1.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
async-trait = "0.1"
getrandom = "0.2"
mac_address = "1"
once_cell = "1"
scylla.workspace = true
scyllax-macros = { version = "0.1.0", path = "../scyllax-macros" }
scyllax-macros-core = { version = "0.1.0", path = "../scyllax-macros-core" }
thiserror = "1"
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
prost-types = { version = "0.12", optional = true }

[features]
default = []
json = ["serde_json", "serde"]
grpc = ["prost-types"]
