[package]
name = "scyllax"
readme = "../README.md"
description = "A SQLx and Discord inspired query system for Scylla"
version = "0.2.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
async-trait = "0.1.82"
getrandom = "0.2.15"
mac_address = "1.1.7"
once_cell = "1.19.0"
scylla.workspace = true
scyllax-macros = { version = "0.2.0", path = "../scyllax-macros" }
scyllax-macros-core = { version = "0.2.0", path = "../scyllax-macros-core" }
thiserror = "1.0.63"
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
prost-types = { version = "0.13.2", optional = true }

[features]
default = []
json = ["serde_json", "serde"]
grpc = ["prost-types"]
